Bug 128847 - OutputDevice::GetPixel() not returning color on MacOS
Summary: OutputDevice::GetPixel() not returning color on MacOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All macOS (All)
: medium normal
Assignee: Chris Sherlock
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-16 23:21 UTC by Chris Sherlock
Modified: 2019-11-18 15:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2019-11-16 23:21:19 UTC
Description:
It appears that for some time now we have not been able to use OutputDevice::GetPixel() on MacOS (I can say from at least Mojave, maybe longer). In fact, we have unit tests that show this already in vcl/qa/cppunit/bitmaprender/BitmapRenderTest.cxx and vcl/qa/cppunit/outdev.cxx

I am filing this as a bug. 

Steps to Reproduce:
Without the #ifdefs around the tests to exclude MacOS, running make CppunitTest_vcl_bitmap_render_test with fail. 

Actual Results:
GetPixel() returns wrong colour.

Expected Results:
GetPixel() should returns right colour.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-11-17 09:41:56 UTC
Let's put it ASSIGNED since you assigned yourself.
Comment 2 Commit Notification 2019-11-17 14:55:12 UTC
Chris Sherlock committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3a8d16ba8ca7ef7349e893f2bf1c7e12d9a8d7ae

tdf#128847 - vcl: fix colorspace names for MacOS

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-11-18 15:19:29 UTC
Chris Sherlock committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/a693c35634e8d44793f5f0fe91adea135e012434

tdf#128847 - vcl: fix colorspace names for MacOS

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.